25- khalti integration setup

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 CLOUDINARY_CLOUD_NAME=dq6uo6xuh
 CLOUDINARY_API_KEY=515721181823387
 CLOUDINARY_API_SECRET=Kuo-ZOUPl7RaAjHoIxQMfAO6pOY
-KHALTI_SECRET_KEY=
+KHALTI_PUBLIC_KEY=8c527add932941339ae20d9658212044
+KHALTI_SECRET_KEY=055c9c21f56245e18b2588fc42e1689c
