--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+"test": "cross-env NODE_ENV=test mocha test --timeout 5000"
   },
   "author": "",
   "license": "ISC",
@@ -27,5 +27,11 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "cross-env": "^7.0.3",
+    "mocha": "^11.1.0"
   }
 }
