Video Call is working now with minor bug

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+MONGO_URI=mongodb://127.0.0.1:27017/db_tutorme
+TEST_MONGO_URI=mongodb://127.0.0.1:27017/db_tutorme_test
 CLOUDINARY_CLOUD_NAME=dq6uo6xuh
 CLOUDINARY_API_KEY=515721181823387
 CLOUDINARY_API_SECRET=Kuo-ZOUPl7RaAjHoIxQMfAO6pOY
