--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-"test": "cross-env NODE_ENV=test mocha test --timeout 5000"
+    "test": "cross-env NODE_ENV=test mocha test --timeout 5000"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "googleapis": "^144.0.0",
