Environment variables for deployment

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URI=mongodb://127.0.0.1:27017/db_tutorme
+PORT=3000
 TEST_MONGO_URI=mongodb://127.0.0.1:27017/db_tutorme_test
 CLOUDINARY_CLOUD_NAME=dq6uo6xuh
 CLOUDINARY_API_KEY=515721181823387
